2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of install lists.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/sparc64/setjmp.S: Force spilling of current window.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	On i386-ieee1275 we run in paged mode. So we need to explicitly map
	the devices before accessing them.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_mm_check_real): Accept const char *
	as file argument.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_cmdline_get): Plug memory leak.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c (grub_file_open): Free file->name on failure.
	(grub_file_close): Free file->name.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (free_pk): Plug memory leak.
	(grub_load_public_key): Likewise.
	(grub_verify_signature_real): Likewise.
	(grub_cmd_verify_signature): Likewise.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (grub_legacy_check_md5_password): Plug
	memory leak.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/powerpc/setjmp.S (grub_setjmp): Save r31.
	(grub_longjmp): Restore r31.
	* include/grub/powerpc/setjmp.h (grub_jmp_buf): Reserve space for r31.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.c (make_image_fwdisk_abs): Insert all partmap
	modules to be in line with make_image_abs.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/mips/setjmp.h (grub_jmp_buf): Fix buffer size.

	setjmp.S uses 12 entries but buffer is declared with only 11 entries.

2013-11-17  Ian Campbell  <ijc@hellion.org.uk>

        * grub-core/disk/uboot/ubootdisk.c: Include SCSI disks.

2013-11-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_func_test.in: Increase memory reservation as on EFI we need