@@ -1,3 +1,9 @@
+2013-11-18  Colin Watson  <cjwatson@ubuntu.com>
+
+	* grub-core/osdep/unix/hostdisk.c (grub_util_make_temporary_file):
+	Handle errors from mkstemp.
+	(grub_util_make_temporary_dir): Handle errors from mkdtemp.
+
 2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Fix handling of install lists.
